--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -1,7 +1,7 @@
 name: nightly-reminder
 on:
   schedule:
-    cron: "* 20 * * 1-5"
+    - cron: "* 20 * * 1-5"
 jobs:
   reminder:
     name: reminder
